I'm laying the groundwork for the header and getting the title setup as well as CSS classnames.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 
     <link rel="stylesheet" href="style.css" />
   </head>
+  <header>
+    <div class="wrapper wrapper--narrow">
+      <h1>Reliable, efficient delivery Powered by Technology.</h1>
+    </div>
+  </header>
   <body>
-    Reliable, efficient delivery Powered by Technology Our Artificial
     Intelligence powered tools use millions of project data points to ensure
     that your project is successful Supervisor Monitors activity to identify
     project roadblocks Team Builder Scans our talent network to create the
