--- a/index.html
+++ b/index.html
@@ -20,15 +20,33 @@
   </head>
   <header>
     <div class="wrapper wrapper--narrow">
-      <h1>Reliable, efficient delivery Powered by Technology.</h1>
+      <h1>Reliable, efficient delivery <span>Powered by Technology</span></h1>
+      <p>
+        Artifical Intelligence powered tools use millions of project data points
+        to ensure that your project is successful
+      </p>
     </div>
   </header>
+  <main>
+    <div class="wrapper">
+      <div class="layout-grid">
+        <div class="col">
+          <div class="card"></div>
+        </div>
+        <div class="col">
+          <div class="card"></div>
+        </div>
+        <div class="col">
+          <div class="card"></div>
+        </div>
+      </div>
+    </div>
+  </main>
+
   <body>
-    Intelligence powered tools use millions of project data points to ensure
-    that your project is successful Supervisor Monitors activity to identify
-    project roadblocks Team Builder Scans our talent network to create the
-    optimal team for your project Karma Regularly evaluates our talent to ensure
-    quality Calculator Uses data from past projects to provide better delivery
-    estimates
+    Supervisor Monitors activity to identify project roadblocks Team Builder
+    Scans our talent network to create the optimal team for your project Karma
+    Regularly evaluates our talent to ensure quality Calculator Uses data from
+    past projects to provide better delivery estimates
   </body>
 </html>
