I've got the card HTML tags in place. Working on styling the individual cards which will require obtaining specific fonts, colors etc.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
     <div class="wrapper">
       <div class="layout-grid">
         <div class="col">
-          <div class="card"></div>
+          <div class="card">
+            <h2></h2>
+            <p></p>
+            <img src="" alt="" />
+          </div>
         </div>
         <div class="col">
           <div class="card"></div>
