--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,200&display=swap"
+      rel="stylesheet"
+    />
+
     <link
       rel="icon"
       type="image/png"
@@ -32,16 +39,31 @@
       <div class="layout-grid">
         <div class="col">
           <div class="card">
-            <h2></h2>
+            <h2>Supervisor</h2>
             <p></p>
-            <img src="" alt="" />
+            <img src="images/icon-supervisor.svg" alt="" />
           </div>
         </div>
         <div class="col">
-          <div class="card"></div>
+          <div class="card">
+            <h2>Team Builder</h2>
+            <p></p>
+            <img src="images/icon-team-builder.svg" alt="" />
+          </div>
         </div>
         <div class="col">
-          <div class="card"></div>
+          <div class="card">
+            <h2>Karma</h2>
+            <p></p>
+            <img src="images/icon-karma.svg" alt="" />
+          </div>
+        <div class="col">
+          <div class="card">
+            <h2>Calculator</h2>
+            <p></p>
+            <img src= "images/icon-calculator.svg" alt="" />
+          </div>
+
         </div>
       </div>
     </div>
