I've made changes to the CSS sheet to get the fonts working. I'll resume work tomorrow on finishing styling the cards.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,200&display=swap"
-      rel="stylesheet"
-    />
+    
 
     <link
       rel="icon"
@@ -22,6 +17,11 @@
     <title>Frontend Mentor | Four card feature section</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,200&display=swap" rel="stylesheet">
+
+    
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -40,27 +40,27 @@
         <div class="col">
           <div class="card">
             <h2>Supervisor</h2>
-            <p></p>
+            <p>Monitor activity to prevent roadblocks.</p>
             <img src="images/icon-supervisor.svg" alt="" />
           </div>
         </div>
         <div class="col">
           <div class="card">
             <h2>Team Builder</h2>
-            <p></p>
+            <p>Scans talent network to create optimal team for your projects.</p>
             <img src="images/icon-team-builder.svg" alt="" />
           </div>
         </div>
         <div class="col">
           <div class="card">
             <h2>Karma</h2>
-            <p></p>
+            <p>Regularly evaluates talent to ensure quality.</p>
             <img src="images/icon-karma.svg" alt="" />
           </div>
         <div class="col">
           <div class="card">
             <h2>Calculator</h2>
-            <p></p>
+            <p>Uses data from past projects to provide better delivery estimates.</p>
             <img src= "images/icon-calculator.svg" alt="" />
           </div>
 
