--- a/index.html
+++ b/index.html
@@ -38,29 +38,29 @@
     <div class="wrapper">
       <div class="layout-grid">
         <div class="col">
-          <div class="card">
-            <h2>Supervisor</h2>
+          <div class="card border-teal">
+            <h2 class="card__title">Supervisor</h2>
             <p>Monitor activity to prevent roadblocks.</p>
             <img src="images/icon-supervisor.svg" alt="" />
           </div>
         </div>
         <div class="col">
-          <div class="card">
-            <h2>Team Builder</h2>
+          <div class="card border-red">
+            <h2 class="card__title">Team Builder</h2>
             <p>
               Scans talent network to create optimal team for your projects.
             </p>
             <img src="images/icon-team-builder.svg" alt="" />
           </div>
-          <div class="card">
-            <h2>Karma</h2>
+          <div class="card border-yellow">
+            <h2 class="card__title">Karma</h2>
             <p>Regularly evaluates talent to ensure quality.</p>
             <img src="images/icon-karma.svg" alt="" />
           </div>
         </div>
         <div class="col">
-          <div class="card">
-            <h2>Calculator</h2>
+          <div class="card border-blue">
+            <h2 class="card__title">Calculator</h2>
             <p>
               Uses data from past projects to provide better delivery estimates.
             </p>
