--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="card border-teal">
             <h2 class="card__title">Supervisor</h2>
             <p>Monitor activity to prevent roadblocks.</p>
-            <img src="images/icon-supervisor.svg" alt="" />
+            <img class="card__img" src="images/icon-supervisor.svg" alt="" />
           </div>
         </div>
         <div class="col">
@@ -50,12 +50,12 @@
             <p>
               Scans talent network to create optimal team for your projects.
             </p>
-            <img src="images/icon-team-builder.svg" alt="" />
+            <img class="card__img" src="images/icon-team-builder.svg" alt="" />
           </div>
           <div class="card border-yellow">
             <h2 class="card__title">Karma</h2>
             <p>Regularly evaluates talent to ensure quality.</p>
-            <img src="images/icon-karma.svg" alt="" />
+            <img class="card__img" src="images/icon-karma.svg" alt="" />
           </div>
         </div>
         <div class="col">
@@ -64,7 +64,7 @@
             <p>
               Uses data from past projects to provide better delivery estimates.
             </p>
-            <img src="images/icon-calculator.svg" alt="" />
+            <img class="card__img" src="images/icon-calculator.svg" alt="" />
           </div>
         </div>
       </div>
